--- a/laokou-service/pom.xml
+++ b/laokou-service/pom.xml
@@ -40,5 +40,6 @@
     <module>laokou-oss</module>
     <module>laokou-network</module>
     <module>laokou-cola</module>
+    <module>laokou-mcp</module>
   </modules>
 </project>
