--- a/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/application.yml
@@ -19,6 +19,8 @@ jasypt:
     password: @JASYPT-ENCRYPTOR-PASSWORD@
 
 server:
+  compression:
+    enabled: true
   ssl:
     # 开启证书
     enabled: @SSL-ENABLED@
