--- a/laokou-service/laokou-mcp/laokou-mcp-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-mcp/laokou-mcp-start/src/main/resources/application.yml
@@ -23,6 +23,7 @@ spring:
           password: @NACOS-PASSWORD@
           register:
             service-group: @NACOS-GROUP@
+            service-name: ${spring.application.name}-iot-server
     mcp:
       server:
         name: ${spring.application.name}-iot-server
