--- a/laokou-common/laokou-common-reactor/pom.xml
+++ b/laokou-common/laokou-common-reactor/pom.xml
@@ -16,6 +16,10 @@
       <groupId>io.projectreactor</groupId>
       <artifactId>reactor-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-core</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
