--- a/laokou-common/laokou-common-test/pom.xml
+++ b/laokou-common/laokou-common-test/pom.xml
@@ -40,6 +40,10 @@
           <groupId>org.apache.logging.log4j</groupId>
           <artifactId>log4j-to-slf4j</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>org.ow2.asm</groupId>
+          <artifactId>asm</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
