--- a/laokou-common/pom.xml
+++ b/laokou-common/pom.xml
@@ -83,6 +83,7 @@
     <module>laokou-common-fory</module>
     <module>laokou-common-plugin</module>
     <module>laokou-common-dubbo</module>
+      <module>laokou-common-context</module>
   </modules>
 
 </project>
