--- a/laokou-common/pom.xml
+++ b/laokou-common/pom.xml
@@ -83,7 +83,8 @@
     <module>laokou-common-fory</module>
     <module>laokou-common-plugin</module>
     <module>laokou-common-dubbo</module>
-      <module>laokou-common-context</module>
+    <module>laokou-common-context</module>
+    <module>laokou-common-starrocks</module>
   </modules>
 
 </project>
