--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,8 @@
     <spring-cloud-alibaba.version>2023.0.3.3</spring-cloud-alibaba.version>
     <!--springdoc-openapi版本-->
     <springdoc-openapi.version>2.8.11</springdoc-openapi.version>
+    <!--testcontainers版本-->
+    <testcontainers.version>1.21.3</testcontainers.version>
     <docker.host>tcp://127.0.0.1:2375</docker.host>
     <docker.registry>registry.cn-shenzhen.aliyuncs.com</docker.registry>
     <docker.namespace>koushenhai</docker.namespace>
@@ -125,7 +127,7 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
-      <!-- 定义spring framework 版本 -->
+      <!-- 定义 spring framework 版本 -->
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-framework-bom</artifactId>
@@ -138,6 +140,14 @@
         <groupId>org.springdoc</groupId>
         <artifactId>springdoc-openapi</artifactId>
         <version>${springdoc-openapi.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <!-- 定义 testcontainers 版本 -->
+      <dependency>
+        <groupId>org.testcontainers</groupId>
+        <artifactId>testcontainers-bom</artifactId>
+        <version>${testcontainers.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
