--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,9 +22,9 @@ jobs:
           cache: maven
           architecture: x64
       - name: Run the Maven verify phase
-        run: mvn --batch-mode --update-snapshots verify -DskipTests
+        run: mvn --batch-mode --update-snapshots verify -DskipTests allow-unsafe-ssl
       - name: Test with Maven
-        run: mvn clean test -P dev
+        run: mvn clean test -P dev allow-unsafe-ssl
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5.5.0
         env:
@@ -58,7 +58,7 @@ jobs:
             ./laokou-service/laokou-oss/laokou-oss-start/target/site/jacoco/jacoco.xml
           token: ${{ secrets.CODECOV_TOKEN }}
       - name: Build with Maven
-        run: mvn clean install -P dev -DskipTests -B
+        run: mvn clean install -P dev -DskipTests -B allow-unsafe-ssl
       - name: Build the Docker image
         run: |
           # 登录阿里云镜像仓库
