--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -165,14 +165,26 @@
     <spring-ai-starter-mcp-server-webflux.version>1.0.1</spring-ai-starter-mcp-server-webflux.version>
     <!--mysql版本-->
     <mysql-connector-j.version>9.4.0</mysql-connector-j.version>
+    <!--modbus4j版本-->
+    <modbus4j.version>3.1.0</modbus4j.version>
   </properties>
 
   <!-- 定义全局jar版本,模块使用需要再次引入但不用写版本号 -->
   <dependencyManagement>
     <dependencies>
       <dependency>
+        <groupId>com.infiniteautomation</groupId>
+        <artifactId>modbus4j</artifactId>
+        <version>${modbus4j.version}</version>
+      </dependency>
+      <dependency>
         <groupId>org.laokou</groupId>
         <artifactId>laokou-common-starrocks</artifactId>
+        <version>${laokou.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.laokou</groupId>
+        <artifactId>laokou-common-modbus4j</artifactId>
         <version>${laokou.version}</version>
       </dependency>
       <dependency>
