--- a/laokou-common/pom.xml
+++ b/laokou-common/pom.xml
@@ -84,6 +84,7 @@
     <module>laokou-common-dubbo</module>
     <module>laokou-common-context</module>
     <module>laokou-common-starrocks</module>
+      <module>laokou-common-modbus4j</module>
   </modules>
 
 </project>
