--- a/laokou-common/pom.xml
+++ b/laokou-common/pom.xml
@@ -84,7 +84,8 @@
     <module>laokou-common-dubbo</module>
     <module>laokou-common-context</module>
     <module>laokou-common-starrocks</module>
-      <module>laokou-common-modbus4j</module>
+    <module>laokou-common-modbus4j</module>
+    <module>laokou-common-testcontainers</module>
   </modules>
 
 </project>
