--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,4 @@
-name: Java CI with Maven
+name: Java CI with Maven Mvnd
 
 on:
   push:
@@ -21,8 +21,14 @@ jobs:
           distribution: 'temurin'
           cache: maven
           architecture: x64
-      - name: Test with Maven
-        run: mvn clean test -P dev
+      - name: Install Maven Mvnd
+        run: |
+          curl -s "https://get.sdkman.io" | bash
+          source "$HOME/.sdkman/bin/sdkman-init.sh"
+          sdk install mvnd
+          echo mvnd --version
+      - name: Test with Maven Mvnd
+        run: mvnd clean test -P dev
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5.5.1
         env:
@@ -55,8 +61,8 @@ jobs:
             ./laokou-service/laokou-auth/laokou-auth-domain/target/site/jacoco/jacoco.xml,
             ./laokou-service/laokou-oss/laokou-oss-start/target/site/jacoco/jacoco.xml
           token: ${{ secrets.CODECOV_TOKEN }}
-      - name: Build with Maven
-        run: mvn clean install -P dev -DskipTests -B
+      - name: Build with Maven Mvnd
+        run: mvnd clean install -P dev -DskipTests -B
       - name: Build the Docker image
         run: |
           # 登录阿里云镜像仓库
