--- a/laokou-common/laokou-common-sentinel/pom.xml
+++ b/laokou-common/laokou-common-sentinel/pom.xml
@@ -35,6 +35,12 @@
     <dependency>
       <groupId>com.alibaba.cloud</groupId>
       <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>com.alibaba.fastjson2</groupId>
+          <artifactId>fastjson2-extension</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>com.alibaba.cloud</groupId>
