--- a/laokou-common/laokou-common-modbus4j/pom.xml
+++ b/laokou-common/laokou-common-modbus4j/pom.xml
@@ -17,7 +17,7 @@
       <artifactId>laokou-common-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.infiniteautomation</groupId>
+      <groupId>com.github.infiniteautomation</groupId>
       <artifactId>modbus4j</artifactId>
     </dependency>
     <dependency>
