--- a/laokou-common/laokou-common-testcontainers/pom.xml
+++ b/laokou-common/laokou-common-testcontainers/pom.xml
@@ -44,6 +44,10 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <dependency>
+        <groupId>org.laokou</groupId>
+        <artifactId>laokou-common-i18n</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
