--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -52,6 +52,7 @@ jobs:
             ./laokou-common/laokou-common-graalvm-js/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-mybatis-plus/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-starrocks/target/site/jacoco/jacoco.xml,
+            ./laokou-common/laokou-common-ftp/target/site/jacoco/jacoco.xml,
             ./laokou-service/laokou-auth/laokou-auth-domain/target/site/jacoco/jacoco.xml
           token: ${{ secrets.CODECOV_TOKEN }}
       - name: Build with Maven Mvnd
