--- a/laokou-common/laokou-common-ftp/pom.xml
+++ b/laokou-common/laokou-common-ftp/pom.xml
@@ -27,8 +27,8 @@
       <optional>true</optional>
     </dependency>
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-tomcat</artifactId>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-testcontainers</artifactId>
       <scope>test</scope>
       <optional>true</optional>
     </dependency>
