--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: azul/zulu-openjdk:25-jre-latest
+      - image: cimg/openjdk:21.0.6
 
     environment:
       JVM_OPTS: -Xmx2048m
