--- a/doc/deploy/docker-compose/env/sentinel.env
+++ b/doc/deploy/docker-compose/env/sentinel.env
@@ -3,6 +3,6 @@ AUTH_PASSWORD=laokou123
 VERSION=3.5.4
 PROFILE=dev
 SERVER_PORT=8972
-JVM_OPTS="-Xmx512m -Xms512m -Xmn256m -XX:+UseG1GC -Duser.timezone=GMT+08"
+JVM_OPTS="-Xmx512m -Xms512m -Xmn256m -XX:+UseCompactObjectHeaders -XX:+UseG1GC -Duser.timezone=GMT+08"
 TZ=Asia/Shanghai
 LANG=zh_CN.UTF-8
