--- a/doc/deploy/docker-compose/env/logstash.env
+++ b/doc/deploy/docker-compose/env/logstash.env
@@ -1,1 +1,1 @@
-JVM_OPTS="-Xmx512m -Xms512m -Xmn256m -XX:+UseG1GC  -Duser.timezone=GMT+08 -Dserver.port=10003"
+JVM_OPTS="-Xmx512m -Xms512m -Xmn256m -XX:+UseCompactObjectHeaders -XX:+UseG1GC  -Duser.timezone=GMT+08 -Dserver.port=10003"
