--- a/doc/deploy/docker-compose/env/nacos.env
+++ b/doc/deploy/docker-compose/env/nacos.env
@@ -9,5 +9,5 @@ DATASOURCE_PLATFORM=postgresql
 JASYPT_ENCRYPTOR_PASSWORD=laokou
 TZ=Asia/Shanghai
 LANG=zh_CN.UTF-8
-JVM_OPTS="-Xmx512m -Xms512m -Xmn256m -XX:+UseG1GC  -Duser.timezone=GMT+08"
+JVM_OPTS="-Xmx512m -Xms512m -Xmn256m -XX:+UseCompactObjectHeaders -XX:+UseG1GC  -Duser.timezone=GMT+08"
 NACOS_OPTS="-Dnacos.standalone=true -Dcom.google.protobuf.use_unsafe_pre22_gencode -Dnacos.home=/opt"
