--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -169,11 +169,18 @@
     <modbus4j.version>v3.1.0</modbus4j.version>
     <!--mongodb版本-->
     <mongodb.version>4.5.4</mongodb.version>
+    <!--fastjson版本-->
+    <fastjson>2.0.56</fastjson>
   </properties>
 
   <!-- 定义全局jar版本,模块使用需要再次引入但不用写版本号 -->
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>com.alibaba</groupId>
+        <artifactId>fastjson</artifactId>
+        <version>${fastjson}</version>
+      </dependency>
       <dependency>
         <groupId>org.laokou</groupId>
         <artifactId>laokou-common-mongodb</artifactId>
