--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,15 +14,13 @@ jobs:
         java-version: [21]
     steps:
       - uses: actions/checkout@v5.0.0
-      - name: Set up GraalVM JDK 21 for x64
+      - name: Set up JDK 21 for x64
         uses: actions/setup-java@v5.0.0
         with:
           java-version: '21'
-          distribution: 'graalvm'
+          distribution: 'temurin'
           cache: maven
           architecture: x64
-      - name: Install Graal.js (JavaScript) component
-        run: $GRAALVM_HOME/bin/gu install js
       - name: Install with Maven Mvnd
         run: |
           MVND_VERSION="2.0.0-rc-3"
