--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: cimg/openjdk:21.0.6
+      - image: ghcr.io/graalvm/jdk-community:25.0.0
 
     environment:
       JVM_OPTS: -Xmx2048m
