--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,14 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java-version: [21]
+        java-version: [25]
     steps:
       - uses: actions/checkout@v5.0.0
-      - name: Set up JDK 21 for x64
+      - name: Set up GraalVM JDK 25 for x64
         uses: actions/setup-java@v5.0.0
         with:
-          java-version: '21'
-          distribution: 'temurin'
+          java-version: '25'
+          distribution: 'graalvm'
           cache: maven
           architecture: x64
       - name: Install with Maven Mvnd
@@ -49,7 +49,6 @@ jobs:
             ./laokou-common/laokou-common-sensitive/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-secret/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-elasticsearch/target/site/jacoco/jacoco.xml,
-            ./laokou-common/laokou-common-graalvm-js/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-mybatis-plus/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-starrocks/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-ftp/target/site/jacoco/jacoco.xml,
