--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,24 @@
 version: 2.1
 
-jobs:
-  build:
-    docker:
-      - image: ghcr.io/graalvm/jdk-community:25.0.0
-
+executors:
+  ubuntu:
     environment:
       JVM_OPTS: -Xmx2048m
       TERM: dumb
+    machine:
+      image: ubuntu-2404:2024.11.1
+      docker_layer_caching: true
+    resource_class: arm.large
 
+jobs:
+  jdk25:
+    executor: ubuntu
     steps:
+      - run: sudo apt-get update
+      - run: sudo apt install openjdk-25-jdk
       - checkout
       - run: mvn clean install -P dev -DskipTests -B
 workflows:
   maven-build:
     jobs:
-      - build
+      - jdk25
