--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -43,11 +43,11 @@ jobs:
       uses: actions/checkout@v5.0.0
       with:
         fetch-depth: 2
-    - name: Set up JDK
+    - name: Set up GraalVM JDK 25
       uses: actions/setup-java@v5.0.0
       with:
-        java-version: '21'
-        distribution: 'temurin'
+        java-version: '25'
+        distribution: 'graalvm'
         cache: maven
         architecture: x64
     # Initializes the CodeQL tools for scanning.
